@@ -1,3 +1,13 @@
+2012-12-02  Julie Parent  <jparent@chromium.org>
+
+        Remove dead code in flakiness dashboard for obsolete buildDir option
+        https://bugs.webkit.org/show_bug.cgi?id=103792
+
+        Reviewed by Dirk Pranke.
+
+        * TestResultServer/static-dashboards/dashboard_base.js:
+        (initBuilders):
+
 2012-12-02  Dirk Pranke  <dpranke@chromium.org>
 
         nrwt: clean up logic for retrying failed tests a bit
